# github-report

./: Makefile  README.md  github-report.cabal
app/: Actions.hs  Opts.hs  Types.hs
specs/GithubReport/: TypesSpec.hs
src/GithubReport/: Types.hs
src/GithubReport/Actions/: Default.hs  Triage.hs
